Fix charts overflow being cut

--- a/public/stylesheets/style_v2.css
+++ b/public/stylesheets/style_v2.css
@@ -413,6 +413,9 @@ span.relative-size., span.change {
     width: 25%;
 }
 
+.change{
+    overflow: visible !important;
+}
 .unit {
     width: auto;
 }
